--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,15 +1,41 @@
 [package]
 name = "modify-crc32"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[[bin]]
+name = "modify-crc32-cli"
+path = "src/bin/cli.rs"
+required-features = ["cli"]
+
+[[bin]]
+name = "modify-crc32-gui"
+path = "src/bin/gui/main.rs"
+required-features = ["gui"]
+
+[features]
+default = ["cli", "gui"]
+cli = ["dep:argh", "dep:kdam", "dep:rprompt"]
+gui = ["dep:eframe", "dep:egui-modal", "dep:egui_file", "dep:flume"]
+
 [dependencies]
-argh = "0.1.10"
 crc32fast = "1.3.2"
-kdam = { version = "0.3.0", features = ["template", "gradient"] }
-rprompt = "2.0.2"
+
+# cli dependencies
+argh = { version = "0.1.10", optional = true }
+kdam = { version = "0.3.0", features = [
+  "template",
+  "gradient",
+], optional = true }
+rprompt = { version = "2.0.2", optional = true }
+
+# gui dependencies
+eframe = { version = "0.21.3", optional = true }
+egui-modal = { version = "0.2.2", optional = true }
+egui_file = { version = "0.8.0", optional = true }
+flume = { version = "0.10.14", default-features = false, optional = true }
 
 [dev-dependencies]
 fastrand = "1.9.0"
